--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ body {
   font-family: 'Product Sans';
   color: #fff;
   text-transform: uppercase;
-  background-image: url('./img/bg.jpeg');
+  background-image: url('./img/bg.png');
   background-size: cover;
   background-repeat: no-repeat;
   border: 13px solid #fff;
@@ -59,30 +59,12 @@ body {
   display: table;  
 }
 
-.loading h1 {
-  font-size: 34px;
-  font-weight: 400;
-  text-transform: capitalize;
-}
-
-.logo {
-  width: 144px;
-  height: 144px;
-  margin: 0 auto;
-  background-image: url('./img/logo.png');
-  background-size: cover;
-  background-position: center center;
-  border: 5px solid #fff;
-  border-radius: 50%;
-  box-shadow: 2px 2px 2px 1px rgba(0,0,0,0.3);
-}
-
 .loader:before,
 .loader:after,
 .loader {
   border-radius: 50%;
-  width: 13px;
-  height: 13px;
+  width: 21px;
+  height: 21px;
   -webkit-animation-fill-mode: both;
           animation-fill-mode: both;
   -webkit-animation: load 1.8s infinite ease-in-out;
@@ -91,7 +73,7 @@ body {
 
 .loader {
   font-size: 10px;
-  margin: 21px auto;
+  margin: 0 auto;
   position: relative;
   text-indent: -9999em;
   -webkit-transform: translateZ(0);
@@ -326,14 +308,8 @@ a.twitter:before {
 
 <div class="loading" id="load_screen">
 <div class="loading-inner">
-<div class="vertical-center text-center">
-<div class="container-fluid">
-<div class="col-lg-12 col-md-12 col-sm-12">
-<div class="logo"></div>
-<h1>Debashis Barman</h1>
-<div class="loader"></div>
-</div>
-</div>
+<div class="vertical-center">
+<div class="loader">Loading</div>
 </div>
 </div>
 </div>
@@ -372,11 +348,22 @@ Distribute</h2>
 </div>
 </div>
 
-<script type="text/javascript">
+<script>
 window.addEventListener("load", function(){
 	var load_screen = document.getElementById("load_screen");
 	document.body.removeChild(load_screen);
 });
+</script>
+
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-49449513-1', 'auto');
+ga('send', 'pageview');
+
 </script>
 
 </body>
