--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <title>Debashis Barman | Designer & Developer</title>
 <meta name="description" content="Designer and developer; specialize in fluid design and mobile development; passionate programmer and occasional blogger">
 <meta name="keywords" content="Web Designer, Developer Debashis Barman, Responsive Web Design, Minimal Web Design"/>
-<meta name="theme-color" content="#667d9f">
+<meta name="theme-color" content="#2196f3">
 <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon" />
 <link rel="stylesheet" href="./css/kathamo.min.css"/>
 <style>
