--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@ a.twitter:before {
 </div>
 <main class="clearfix">
 <div class="col-lg-12 col-md-12 col-sm-12">
-<h2>Design,<br>
-Develop &<br>
+<h2>Design<br>
+Develop<br>
 Distribute</h2>
 </div>
 </main>
