--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@ a:hover,
 a:focus {
   color: #2196f3;
   text-decoration: none;
+  -webkit-tap-highlight-color: rgba(0,0,0, 0.0);
+  outline: none;
 }
 
 .container {
