--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ main {
 }
 
 a,
-a:hover,
-a:focus {
+a:active,
+a:hover {
   color: #2196f3;
   text-decoration: none;
   -webkit-tap-highlight-color: rgba(0,0,0, 0.0);
