--- a/index.html
+++ b/index.html
@@ -37,10 +37,9 @@ body {
 }
 
 main {
-  padding: 5%;
   display: table-cell;
   vertical-align: middle;
-  background-color: #fff;  
+  background-color: #eee;  
 }
 
 a,
@@ -53,6 +52,7 @@ a:hover {
 }
 
 .container {
+  padding: 34px 55px;
   background-color: #fff;
 }
 
@@ -97,12 +97,12 @@ a:hover {
 .twitter-widget li .tweets_txt {
   width: 100%;
   !margin-left: 21px;
-  font-size: 1rem;
+  font-size: 1.618rem;
 }
 
 .twitter-widget li .tweets_txt span {
   display: block;
-  font-size: .618rem;
+  font-size: 1rem;
   color: #95a5a6;
 }
 
@@ -113,15 +113,15 @@ a:hover {
 
 <main class="clearfix">
 <div class="container clearfix">
-<div class="col-lg-offset-2 col-lg-7 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
+<div class="col-lg-8 col-md-8 col-sm-12">
 <h1 class="title">Debashis Barman</h1>
 <h2 class="subtitle">Designer and developer; specialized in fluid design and mobile development; passionate programmer and occasional bloger.</h2>
 </div>
-<div class="col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
+<div class="col-lg-12 col-md-8 col-sm-12">
 <div class="twitter-widget">
 <div id="tweecool"></div>
 </div>
-<p>Follow on <a href="https://twitter.com/iDebashisBarman" target="_blank">@iDebashisBarman</a></p>
+<p>Follow on <a href="https://twitter.com/iDebashisBarman" target="_blank">@iDebashisBarman</a><span class="pull-right"><a href="https://github.com/debashisbarman" target="_blank">Github</a></span></p>
 </div>
 </div>
 </main>
