--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ a:hover {
 <div class="twitter-widget">
 <div id="tweecool"></div>
 </div>
-<p>Follow on <a href="https://twitter.com/iDebashisBarman" target="_blank">@iDebashisBarman</a><span class="pull-right"><a href="https://github.com/debashisbarman" target="_blank">Github</a></span></p>
+<p>Follow on <a href="https://twitter.com/iDebashisBarman" target="_blank">@iDebashisBarman</a></p>
 </div>
 </div>
 </main>
