--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ body {
 main {
   display: table-cell;
   vertical-align: middle;
-  background-color: #eee;  
+  !background-color: #eee;  
 }
 
 a,
@@ -52,7 +52,7 @@ a:hover {
 }
 
 .container {
-  padding: 34px 55px;
+  !padding: 34px 55px;
   background-color: #fff;
 }
 
@@ -113,11 +113,11 @@ a:hover {
 
 <main class="clearfix">
 <div class="container clearfix">
-<div class="col-lg-8 col-md-8 col-sm-12">
+<div class="col-lg-offset-1 col-lg-7 col-md-offset-1 col-md-7 col-sm-offset-1 col-sm-10">
 <h1 class="title">Debashis Barman</h1>
 <h2 class="subtitle">Designer and developer; specialized in fluid design and mobile development; passionate programmer and occasional bloger.</h2>
 </div>
-<div class="col-lg-12 col-md-8 col-sm-12">
+<div class="col-lg-offset-1 col-lg-10 col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10">
 <div class="twitter-widget">
 <div id="tweecool"></div>
 </div>
