--- a/index.html
+++ b/index.html
@@ -27,6 +27,22 @@ html {
   font-size: 100%;
 }
 
+@media (max-width: 767px) {
+
+  html {
+    font-size: 13px;
+  }
+
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+
+  html {
+    font-size: 89%;
+  }
+
+}
+
 body {
   width: 100%;
   height: 100vh;
@@ -40,7 +56,8 @@ main {
   padding: 5% 0;
   display: table-cell;
   vertical-align: middle;
-  !background-color: #eee;  
+  !background-color: #eee; 
+  border-top: 5px solid #2196f3;
 }
 
 a,
