--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
 <title>Debashis Barman | Designer & Developer</title>
 <meta name="description" content="Designer and developer; specialize in fluid design and mobile development; passionate programmer and occasional blogger">
 <meta name="keywords" content="Web Designer, Developer Debashis Barman, Responsive Web Design, Minimal Web Design"/>
-<meta name="theme-color" content="#3e6396">
+<meta name="theme-color" content="#737b7f">
 <script src="./js/jquery.js"></script>
 <script src="./js/tweecool.js"></script>
 <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon" />
 <link rel="stylesheet" href="./css/kathamo.min.css"/>
 <style>
-
 @font-face {
   font-family: 'Product Sans';
   font-style: normal;
@@ -24,64 +23,106 @@
 html {
   padding: 0;
   margin: 0;
-  font-size: 100%;
-}
-
-@media (max-width: 767px) {
-
-  html {
-    font-size: 13px;
-  }
-
-}
-
-@media (min-width: 768px) and (max-width: 1023px) {
-
-  html {
-    font-size: 89%;
-  }
-
 }
 
 body {
   width: 100%;
   height: 100vh;
-  display: table;
   padding: 0;
   margin: 0;
+  display: table;
   font-family: 'Product Sans';
+  color: #fff;
+  background: linear-gradient(rgba(36, 40, 37, 0.50), rgba(36, 40, 37, 0.70)), url('./img/bg.jpg');
+  !background-image: url('./img/bg.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  border: 13px solid #fff;
+}
+
+header ul {
+  padding: 0;
+  margin: 0;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+}
+
+header ul li {
+  padding-right: 34px;
+  padding-left: 34px;
+  list-style: none;
+  float: left;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  line-height: 5rem;
 }
 
 main {
   padding: 5% 0;
   display: table-cell;
   vertical-align: middle;
-  !background-color: #eee; 
-  border-top: 5px solid #2196f3;
 }
 
 a,
 a:active,
 a:hover {
-  color: #2196f3;
+  color: #95a5a6;
   text-decoration: none;
   -webkit-tap-highlight-color: rgba(0,0,0, 0.0);
   outline: none;
 }
 
-.container {
-  !padding: 34px 55px;
-  background-color: #fff;
+footer ul {
+  padding: 0;
+  margin: 0;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 
-.title {
-  font-size: 1.618rem;
+footer ul li {
+  padding-left: 34px;
+  !padding-right: 34px;
+  list-style: none;
+  float: left;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  line-height: 55px;
 }
 
-.subtitle {
+footer ul li:last-child {
+  padding-right: 34px;
+}
+
+footer ul li .profile {
+  padding-top: 5px;
+  padding-left: -34px;
+  margin: 0;
   font-size: 1rem;
-  color: #95a5a6;
-  line-height: 1.75;
+  line-height: 1.5;
+}
+
+.icon {
+  width: 34px;
+  height: 34px;
+  padding: 7px;
+  cursor: pointer;
+  border: 2px solid #fff;
+  border-radius: 50%;
+}
+
+@media (max-width: 767px) {
+
+  .icon {
+    width: 30px;
+    height: 30px;
+    margin-top: 13px; !Important
+    padding: 5px;
+  }
+
 }
 
 .twitter-widget ul {
@@ -115,7 +156,15 @@ a:hover {
 .twitter-widget li .tweets_txt {
   width: 100%;
   !margin-left: 21px;
-  font-size: 1.618rem;
+  font-size: 2rem;
+}
+
+@media (max-width: 767px) {
+
+  .twitter-widget li .tweets_txt {
+    font-size: 21px;
+  }
+
 }
 
 .twitter-widget li .tweets_txt span {
@@ -126,42 +175,53 @@ a:hover {
 
 </style>
 </head>
-
 <body>
 
-<main class="clearfix">
-<div class="container clearfix">
-<div class="col-lg-offset-1 col-lg-7 col-md-offset-1 col-md-7 col-sm-offset-1 col-sm-10">
-<h1 class="title">Debashis Barman</h1>
-<h2 class="subtitle">Designer and developer; specialized in fluid design and mobile development; passionate programmer and occasional bloger.</h2>
+<header>
+<ul>
+<li>@iDebashisBarman</li>
+<div class="pull-right hidden-sm">
+<li>#RandomThoughts</li>
 </div>
-<div class="col-lg-offset-1 col-lg-10 col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10">
+</ul>
+</header>
+
+<main class="clearfix">
+<div class="container">
+<div class="col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-12 text-center">
 <div class="twitter-widget">
 <div id="tweecool"></div>
 </div>
-<p>Follow on <a href="https://twitter.com/iDebashisBarman" target="_blank">@iDebashisBarman</a></p>
 </div>
 </div>
 </main>
+
+<footer>
+<ul>
+<li class="hidden-sm"><img src="./img/profile.jpg" style="width:55px;border:3px solid #fff;border-radius:50%;"></li>
+<li class="visible-sm" style="font-size:13px;line-height:5rem">Debashis Barman</li>
+<li class="hidden-sm"><h1 class="profile">Debashis Barman<br><small>Designer & Developer</small></h1></li>
+<div class="pull-right hidden-sm">
+<li>
+<p class="icon-wrapper">
+<a href="https://twitter.com/iDebashisBarman" target="_blank"><img class="icon" src="./img/twitter.png"></a>
+&emsp;
+<a href="https://github.com/debashisbarman/" target="_blank"><img class="icon" src="./img/github.png"></a>
+&emsp;
+<a href="https://behance.net/debashisbarman/" target="_blank"><img class="icon" src="./img/behance.png"></a>
+</p>
+</li>
+</div>
+</ul>
+</footer>
 
 <script>
 $(document).ready(function() {
 $('#tweecool').tweecool({
 username : 'iDebashisBarman', 
-limit : 2 
+limit : 1
 });
 });
-</script>
-
-<script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-ga('create', 'UA-49449513-1', 'auto');
-ga('send', 'pageview');
-
 </script>
 
 </body>
