--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Debashis Barman | Designer & Developer</title>
+<title>#RandomThoughts | @iDebashisBarman</title>
 <meta name="description" content="Designer and developer; specialize in fluid design and mobile development; passionate programmer and occasional blogger">
 <meta name="keywords" content="Web Designer, Developer Debashis Barman, Responsive Web Design, Minimal Web Design"/>
 <meta name="theme-color" content="#737b7f">
@@ -179,9 +179,9 @@ footer ul li .profile {
 
 <header>
 <ul>
-<li>@iDebashisBarman</li>
-<div class="pull-right hidden-sm">
 <li>#RandomThoughts</li>
+<div class="pull-right hidden-sm">
+<li>@iDebashisBarman</li>
 </div>
 </ul>
 </header>
@@ -199,7 +199,7 @@ footer ul li .profile {
 <footer>
 <ul>
 <li class="hidden-sm"><img src="./img/profile.jpg" style="width:55px;border:3px solid #fff;border-radius:50%;"></li>
-<li class="visible-sm" style="font-size:13px;line-height:5rem">Debashis Barman</li>
+<li class="visible-sm" style="font-size:13px;line-height:5rem">@iDebashisBarman</li>
 <li class="hidden-sm"><h1 class="profile">Debashis Barman<br><small>Designer & Developer</small></h1></li>
 <div class="pull-right hidden-sm">
 <li>
