--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>#RandomThoughts | @iDebashisBarman</title>
+<title>#RandomThoughts | Debashis Barman (@iDebashisBarman)</title>
 <meta name="description" content="Designer and developer; specialize in fluid design and mobile development; passionate programmer and occasional blogger">
 <meta name="keywords" content="Web Designer, Developer Debashis Barman, Responsive Web Design, Minimal Web Design"/>
 <meta name="theme-color" content="#737b7f">
@@ -177,7 +177,7 @@ footer ul li .profile {
 </head>
 <body>
 
-<header>
+<header class="clearfix">
 <ul>
 <li>#RandomThoughts</li>
 <div class="pull-right hidden-sm">
@@ -196,10 +196,11 @@ footer ul li .profile {
 </div>
 </main>
 
-<footer>
+<footer class="clearfix">
 <ul>
 <li class="hidden-sm"><img src="./img/profile.jpg" style="width:55px;border:3px solid #fff;border-radius:50%;"></li>
-<li class="visible-sm" style="font-size:13px;line-height:5rem">@iDebashisBarman</li>
+<li class="visible-sm" style="padding-right:0;line-height:5rem;"><img src="./img/profile.jpg" style="width:34px;border:2px solid #fff;border-radius:50%;"></li>
+<li class="visible-sm" style="padding-left:8px;font-size:13px;">By @iDebashisBarman</li>
 <li class="hidden-sm"><h1 class="profile">Debashis Barman<br><small>Designer & Developer</small></h1></li>
 <div class="pull-right hidden-sm">
 <li>
@@ -222,6 +223,17 @@ username : 'iDebashisBarman',
 limit : 1
 });
 });
+</script>
+
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-49449513-1', 'auto');
+ga('send', 'pageview');
+
 </script>
 
 </body>
