--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ footer ul li .profile {
 
 <main class="clearfix">
 <div class="container">
-<div class="col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-12 text-center">
+<div class="col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 text-center">
 <div class="twitter-widget">
 <div id="tweecool"></div>
 </div>
