--- a/index.html
+++ b/index.html
@@ -173,9 +173,111 @@ footer ul li .profile {
   color: #95a5a6;
 }
 
+.vertical-center {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+
+  .vertical-center {
+    padding-top: 5%;
+    padding-bottom: 5%;
+  }
+
+}
+
+.loading {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 2;
+  color: #737b7f;
+  background-color: #fff;
+}
+
+.loading-inner {
+  width: 100%;
+  height: 100vh;
+  display: table;  
+}
+
+.loader:before,
+.loader:after,
+.loader {
+  border-radius: 50%;
+  width: 21px;
+  height: 21px;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+  -webkit-animation: load 1.8s infinite ease-in-out;
+          animation: load 1.8s infinite ease-in-out;
+}
+
+.loader {
+  font-size: 10px;
+  margin: 0 auto;
+  position: relative;
+  text-indent: -9999em;
+  -webkit-transform: translateZ(0);
+      -ms-transform: translateZ(0);
+          transform: translateZ(0);
+  -webkit-animation-delay: -0.16s;
+          animation-delay: -0.16s;
+}
+
+.loader:before {
+  left: -3.5em;
+  -webkit-animation-delay: -0.32s;
+          animation-delay: -0.32s;
+}
+
+.loader:after {
+  left: 3.5em;
+}
+
+.loader:before,
+.loader:after {
+  content: '';
+  position: absolute;
+  top: 0;
+}
+
+@-webkit-keyframes load {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 2.5em 0 -1.3em #737b7f;
+  }
+  40% {
+    box-shadow: 0 2.5em 0 0 #737b7f;
+  }
+}
+
+@keyframes load {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 2.5em 0 -1.3em #737b7f;
+  }
+  40% {
+    box-shadow: 0 2.5em 0 0 #737b7f;
+  }
+}
+
 </style>
 </head>
 <body>
+
+<div class="loading" id="load_screen">
+<div class="loading-inner">
+<div class="vertical-center">
+<div class="loader">Loading</div>
+</div>
+</div>
+</div>
 
 <header class="clearfix">
 <ul>
@@ -222,6 +324,13 @@ $('#tweecool').tweecool({
 username : 'iDebashisBarman', 
 limit : 1
 });
+});
+</script>
+
+<script>
+window.addEventListener("load", function(){
+	var load_screen = document.getElementById("load_screen");
+	document.body.removeChild(load_screen);
 });
 </script>
 
