--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ footer ul li .profile {
 <ul>
 <li>#RandomThoughts</li>
 <div class="pull-right hidden-sm">
-<li>@iDebashisBarman</li>
+<li>@DebashisBarman</li>
 </div>
 </ul>
 </header>
@@ -302,12 +302,12 @@ footer ul li .profile {
 <ul>
 <li class="hidden-sm"><img src="./img/profile.jpg" style="width:55px;border:3px solid #fff;border-radius:50%;"></li>
 <li class="visible-sm" style="padding-right:0;line-height:5rem;"><img src="./img/profile.jpg" style="width:34px;border:2px solid #fff;border-radius:50%;"></li>
-<li class="visible-sm" style="padding-left:8px;font-size:13px;">By @iDebashisBarman</li>
+<li class="visible-sm" style="padding-left:8px;font-size:13px;">By @DebashisBarman</li>
 <li class="hidden-sm"><h1 class="profile">Debashis Barman<br><small>Designer & Developer</small></h1></li>
 <div class="pull-right hidden-sm">
 <li>
 <p class="icon-wrapper">
-<a href="https://twitter.com/iDebashisBarman" target="_blank"><img class="icon" src="./img/twitter.png"></a>
+<a href="https://twitter.com/debashisbarman" target="_blank"><img class="icon" src="./img/twitter.png"></a>
 &emsp;
 <a href="https://github.com/debashisbarman/" target="_blank"><img class="icon" src="./img/github.png"></a>
 &emsp;
@@ -321,7 +321,7 @@ footer ul li .profile {
 <script>
 $(document).ready(function() {
 $('#tweecool').tweecool({
-username : 'iDebashisBarman', 
+username : 'DebashisBarman', 
 limit : 1
 });
 });
