--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>#RandomThoughts | Debashis Barman (@iDebashisBarman)</title>
+<title>#RandomThoughts | Debashis Barman (@DebashisBarman)</title>
 <meta name="description" content="Designer and developer; specialize in fluid design and mobile development; passionate programmer and occasional blogger">
 <meta name="keywords" content="Web Designer, Developer Debashis Barman, Responsive Web Design, Minimal Web Design"/>
 <meta name="theme-color" content="#737b7f">
@@ -307,7 +307,7 @@ footer ul li .profile {
 <div class="pull-right hidden-sm">
 <li>
 <p class="icon-wrapper">
-<a href="https://twitter.com/debashisbarman" target="_blank"><img class="icon" src="./img/twitter.png"></a>
+<a href="https://twitter.com/DebashisBarman" target="_blank"><img class="icon" src="./img/twitter.png"></a>
 &emsp;
 <a href="https://github.com/debashisbarman/" target="_blank"><img class="icon" src="./img/github.png"></a>
 &emsp;
