--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ footer * {
 <img class="avatar" src="./img/avatar.jpg">
 <h1>Debashis Barman</h1>
 <h2>Designer and developer; specialized in fluid design and mobile development; passionate programmer and microblogger.</h2>
-<p class="button-wrapper"><a class="button" href="">About Debashis Barman</a></p>
+<p class="button-wrapper"><a class="button" href="./assets/DebashisBarmanCV.pdf">About Debashis Barman</a></p>
 <p>
 <a href="https://twitter.com/DebashisBarman"><span class="fa fa-fw fa-2x fa-twitter"></span></a>
 <a href="https://github.com/debashisbarman/"><span class="fa fa-fw fa-2x fa-github"></span></a>
